k8s/landing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: orbit
  labels:
    app: landing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: landing
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: mahmoud416/orbit-landing:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 8
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: orbit
spec:
  selector:
    app: landing
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
